feat: add endpoint to get user profile
